# pynika

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
doc/: implementation_plan.md  requirements_specification.md
docs/: cli_usage.md  gui_usage.md  installation.md  python_api.md
examples/: NI1_BeamCenterUtils.ipf  NI1_ConvProc.ipf  SAXS.hdf  WAXS.hdf  convertSWAXS.py
pynika/: __init__.py  _instrument_configs.py  calibrants.py  calibrator.py  cli.py  geometry.py
pynika/fitting/: __init__.py  optimizer.py
pynika/gui/: __init__.py  main_window.py
pynika/io/: __init__.py  hdf5_io.py  pv_io.py
scripts/: batch_check.py
tests/: test_calibrants.py
